# spatio_temporal_activity_patterns

./: .gitignore
activity_recommender_system/: CMakeLists.txt  package.xml  setup.py
activity_recommender_system/config/: region_to_wp.yaml
activity_recommender_system/launch/: activity_recommendation.launch
activity_recommender_system/scripts/: client_srv_test.py
activity_recommender_system/src/activity_recommender_system/: recommender.py
activity_recommender_system/srv/: ChangeMethodSrv.srv  GetExplorationTasks.srv
activity_temporal_patterns/: CMakeLists.txt  package.xml  setup.py
activity_temporal_patterns/launch/: actrap.launch
activity_temporal_patterns/scripts/: activity_plot.py  activity_service.py  client_srv_test.py
activity_temporal_patterns/src/activity_temporal_patterns/: activity_count.py  detect_peaks.py  online_counter.py
activity_temporal_patterns/srv/: ActivityBestTimeEstimateSrv.srv  ActivityEstimateSrv.srv
detection_observation/: CMakeLists.txt  package.xml  setup.py
detection_observation/config/: simulate.yaml  simulate_codependent.yaml
detection_observation/launch/: detection_observation.launch
detection_observation/msg/: DetectionObservation.msg
detection_observation/scripts/: online_observation.py
detection_observation/src/detection_observation/: detection_count.py  scene_count.py  simulate_count.py  trajectory_count.py  ubd_count.py
multi_detect_temporal_patterns/: CMakeLists.txt  package.xml  setup.py
multi_detect_temporal_patterns/config/: detectors.yaml  sensors.yaml
multi_detect_temporal_patterns/data/: negative_count.yaml  positive_count.yaml  scene.yaml  trajectory.yaml  upper_body.yaml  wp_history.yaml
multi_detect_temporal_patterns/launch/: popp.launch
multi_detect_temporal_patterns/scripts/: client_srv_test.py  multi_detect_plot.py  multi_sensor_service.py
multi_detect_temporal_patterns/src/multi_detect_temporal_patterns/: beta_binomial.py  independent_count_posterior.py  multiple_detection_count.py  multiple_detection_probability.py  offline_counter.py  online_counter.py
multi_detect_temporal_patterns/srv/: BestTimeEstimateSrv.srv
people_temporal_patterns/: CMakeLists.txt  package.xml  setup.py
people_temporal_patterns/config/: synthetic.yaml
people_temporal_patterns/launch/: peetrap.launch
people_temporal_patterns/scripts/: client_srv_test.py  counter_service.py  offline_system.py  people_service.py
people_temporal_patterns/src/people_temporal_patterns/: offline_counter.py  online_counter.py  people_count.py  synthetic.py
people_temporal_patterns/srv/: PeopleBestTimeEstimateSrv.srv  PeopleEstimateSrv.srv
region_observation/: CMakeLists.txt  package.xml  setup.py
region_observation/launch/: observation.launch
region_observation/scripts/: observe.py
region_observation/src/region_observation/: observation_proxy.py  offline_observe.py  online_observe.py  util.py
region_observation/src/region_observation/.ropeproject/: globalnames
scene_temporal_patterns/: CMakeLists.txt  package.xml  setup.py
scene_temporal_patterns/launch/: scitrap.launch
scene_temporal_patterns/scripts/: client_srv_test.py  detector.py  scene_plot.py  scene_service.py
scene_temporal_patterns/src/scene_temporal_patterns/: offline_counter.py  online_counter.py  scene_count.py
scene_temporal_patterns/srv/: SceneEstimateSrv.srv
spectral_poisson_processes/: CMakeLists.txt  package.xml  setup.py
spectral_poisson_processes/msg/: ProcessMsg.msg
spectral_poisson_processes/src/poisson_processes/: processes.py  rate.py  wrapper.py
spectral_poisson_processes/src/spectral_processes/: processes.py  util.py  wrapper.py
temporal_patterns_launch/: CMakeLists.txt  package.xml
temporal_patterns_launch/launch/: temporal_patterns.launch  temporal_patterns_popp.launch
