<?xml version="1.0"?>
<package>
  <name>multi_detect_temporal_patterns</name>
  <version>1.0.0</version>
  <description>The multi_detect_temporal_patterns package</description>

  <maintainer email="fxj345@cs.bham.ac.uk">Ferdian Jovan</maintainer>

  <license>MIT</license>

  <author email="fxj345@cs.bham.ac.uk">Ferdian Jovan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>detection_observation</build_depend>
  <build_depend>spectral_poisson_processes</build_depend>
  <build_depend>region_observation</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>detection_observation</run_depend>
  <run_depend>spectral_poisson_processes</run_depend>
  <run_depend>region_observation</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
