<?xml version="1.0"?>
<package>
  <name>spectral_poisson_processes</name>
  <version>1.0.0</version>
  <description>The spectral_poisson_processes package</description>

  <maintainer email="fxj345@cs.bham.ac.uk">Ferdian Jovan</maintainer>

  <license>MIT</license>

  <author email="fxj345@cs.bham.ac.uk">Ferdian Jovan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
